// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Switch /> error renders 1`] = `
<div>
  <button
    aria-checked="false"
    aria-describedby="form-0_mock--error"
    aria-label="Off"
    aria-labelledby="form-0_mock--label"
    id="form-0_mock"
    role="switch"
    type="button"
  />
  <label
    for="form-0_mock"
    id="form-0_mock--label"
  >
    Example
  </label>
  <span
    id="form-0_mock--error"
    role="alert"
  >
    Error
  </span>
</div>
`;

exports[`<Switch /> help renders 1`] = `
<div>
  <button
    aria-checked="false"
    aria-label="Off"
    aria-labelledby="form-0_mock--label"
    id="form-0_mock"
    role="switch"
    type="button"
  />
  <label
    for="form-0_mock"
    id="form-0_mock--label"
  >
    Example
    <span>
      Help
    </span>
  </label>
</div>
`;

exports[`<Switch /> label renders 1`] = `
<div>
  <button
    aria-checked="false"
    aria-label="Off"
    aria-labelledby="form-0_mock--label"
    id="form-0_mock"
    role="switch"
    type="button"
  />
  <label
    for="form-0_mock"
    id="form-0_mock--label"
  >
    Label
  </label>
</div>
`;

exports[`<Switch /> renders 1`] = `
<div>
  <button
    aria-checked="false"
    aria-label="Off"
    aria-labelledby="form-0_mock--label"
    id="form-0_mock"
    role="switch"
    type="button"
  />
  <label
    for="form-0_mock"
    id="form-0_mock--label"
  >
    Example
  </label>
</div>
`;
